@@ -53,7 +53,7 @@ function momoTweak.ReworkPressureTank()
 		momoTweak.replace_with_ingredient("angels-pressure-tank-1", "steel-plate", {"steel-plate", 50})
 		momoTweak.replace_with_ingredient("angels-pressure-tank-1", "stone-brick", {"stone-brick", 70})
 		bobmods.lib.recipe.add_ingredient("angels-pressure-tank-1", {momoTweak.ele.circuit[1], 20})
-		if (settings.startup["momo-enable-bob-extend-frame"].value) then+
+		if (settings.startup["momo-enable-bob-extend-frame"].value) then
 			bobmods.lib.recipe.add_ingredient("angels-pressure-tank-1", {"basic-structure-components", 4})
 		end
 	end
